# tigtag

./: .gitignore  Cargo.toml  README.md  index.html
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros_inside/src/: lib.rs
crates/share/: Cargo.toml
crates/share/src/: config.rs  lib.rs
crates/share/src/misc/: constants.rs  functions.rs  mod.rs
crates/template/: Cargo.toml
crates/template/src/: config.rs  lib.rs  main_window.rs  types.rs
crates/template/src/misc/: constants.rs  mod.rs  (+1 more)
crates/tigtag/: Cargo.toml
crates/tigtag/src/: debug.rs  init_app.rs  load_assets.rs  main.rs
crates/tigtag/src/play_game/: chasers.rs  common.rs  mod.rs
crates/tigtag/src/play_game/ui/: effect.rs  stage_start.rs  title_demo.rs
crates/tigtag/src/template/: config.rs  debug.rs  init_app.rs  load_assets.rs  main_window.rs  mod.rs  types.rs
crates/tigtag/src/template/misc/: constants.rs  functions.rs
crates/tigtag/src/tigtag_inside/: chasers.rs  detection.rs  header.rs  map.rs  mod.rs  player.rs  schedule.rs
crates/tigtag/src/tigtag_inside/demo/: auto_drive.rs  schedule.rs
crates/tigtag/src/tigtag_inside/ui/: effect.rs  game_over.rs  stage_clear.rs
crates/tigtag_inside/src/: chasers.rs  common.rs  detection.rs  header.rs  lib.rs  pause.rs  player.rs  schedule.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros_inside/: Cargo.toml
public/: Cargo.toml
public/src/: config.rs  lib.rs  types.rs
share/src/: config.rs
src/: asset_loading.rs  chasers.rs  consts.rs  demo_play.rs  demoplay.rs  fetch_assets.rs  game_play.rs  gameplay.rs  init_app.rs  load_assets.rs  main.rs  map.rs  player.rs  plugin_demoplay.rs  plugin_gameplay.rs  plugin_initialize.rs  public.rs  sprite_bundles.rs  text_bundles.rs  title_demo.rs  types.rs  ui.rs  util.rs  util_game.rs
src/consts/: mod.rs  text_ui.rs
src/fetch_assets/: mod.rs  spawn_text_ui.rs
src/game_play/: chasers.rs  cross_button.rs  header_info.rs  map.rs  mod.rs  pause.rs  player.rs  ui_update.rs
src/game_play/player/: cross_button.rs  demo_algorithm.rs  which_way_goes.rs
src/gameplay/: chasers.rs  countdown_ui.rs  map.rs  mod.rs  player.rs  util.rs
src/init_app/: fetch_assets.rs  spawn_text_ui.rs
src/init_game/: load_assets.rs  mod.rs
src/play_game/: chasers.rs  detection.rs  header.rs  input.rs  judge.rs  map.rs  mod.rs  pause.rs  player.rs  schedule.rs  ui.rs  ui_center.rs
src/play_game/demo/: mod.rs
src/play_game/title_demo/: schedule.rs
src/play_game/ui/: center.rs  effect.rs  game_over.rs  game_title.rs  header.rs  mod.rs  stage_clear.rs  stage_start.rs
src/public/: config.rs  constants.rs  debug.rs  misc.rs  mod.rs  types.rs
src/public/misc/: constants.rs  functions.rs
src/public/types/: dxdy.rs  grid_pixel_dxdy.rs  map.rs  player_chaser.rs
src/title_demo/: algorithm.rs  auto_drive.rs  mod.rs  schedule.rs
tigtag/: Cargo.toml  index.html
tigtag/src/: d_demo_play.rs  debug.rs  demo_play.rs  game_play.rs  init_app.rs  main.rs  public.rs
tigtag/src/a_init_app/: text_ui.rs
tigtag/src/a_public/: config.rs  constants.rs  debug.rs  misc.rs  mod.rs  types.rs
tigtag/src/a_public/types/: map.rs
tigtag/src/b_game_play/: cross_button.rs  mod.rs  player.rs  ui_update.rs
tigtag/src/b_init_app/: fetch_assets.rs  mod.rs  text_ui.rs
tigtag/src/c_game_play/: chasers.rs  cross_button.rs  mod.rs  player.rs  ui_update.rs
tigtag/src/c_game_play/player/: demo_algorithm.rs
tigtag/src/game_play/: map.rs  ui_update.rs
tigtag/src/game_play/player/: demo_algorithm.rs
tigtag/src/init_app/: fetch_assets.rs  spawn_text_ui.rs
tigtag/src/play_game/: chasers.rs  common.rs  detection.rs  header.rs  map.rs  mod.rs  pause.rs  player.rs  schedule.rs
tigtag/src/play_game/demo/: auto_drive.rs  footer.rs  schedule.rs
tigtag/src/play_game/ui/: effect.rs  game_over.rs  title_demo.rs
tigtag/src/public/: config.rs  constants.rs  debug.rs  mod.rs  types.rs
tigtag/src/public/misc/: constants.rs  functions.rs
tigtag/src/public/types/: grid_pixel_dxdy.rs  map.rs  player_chaser.rs
tigtag/wasm/: tigtag.js
tigtag_inside/: Cargo.toml
tigtag_inside/src/: common.rs  lib.rs
tigtag_inside/src/ui/: effect.rs
wasm/: tigtag.js
(+2 files in other folders)
