[package]
name = "tigtag"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true

rand.workspace = true
chrono.workspace = true

macros.workspace = true

[[bin]]
name = "tigtag"
path = "crates/tigtag/src/main.rs"

[features]
sprite_off = [] # cargo run --features sprite_off

[profile.release-wasm]
inherits = "release"
opt-level = "s"
debug = "none"
#split-debuginfo = "packed" #platform-specific
strip = "symbols"
#lto = true #モバイルブラウザで表示されない不具合の対策
codegen-units = 1
panic = "abort"

################################################################################

[workspace]
resolver = "2"

[workspace.package]
version = "0.14.2"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.14", features = [ "bevy_dev_tools" ] }

rand = "0.8"
chrono = "0.4"

macros        = { path = "crates/macros"        }
macros_inside = { path = "crates/macros_inside" }

syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

#bevy = { git = "https://github.com/bevyengine/bevy" } #Master branch
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "release-0.14.0" }

# WASMの場合にどれか指定する必要がある？？
# rand = { version = "0.8.4", features = [ "wasm-bindgen" ] }
# getrandom = { version = "0.2.4", features = [ "js" ] }
# getrandom = { version = "0.2.4", features = [ "wasm-bindgen" ] }
