[package]
name = "tigtag"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
once_cell.workspace = true
rand.workspace = true
chrono.workspace = true

tigtag_inside.workspace = true
public.workspace = true

[features]
sprite_sheet_off = [] # cargo run --features sprite_sheet_off