[package]
name = "share"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
once_cell.workspace = true

macros.workspace = true

[features]
sprite_sheet_off = [] # cargo run --features sprite_sheet_off
