[package]
name = "tigtag"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
rand.workspace = true

template.workspace = true

[features]
sprite_sheet_off = [] # cargo run --features sprite_sheet_off
